src/objects/Reference__c.object
<CustomObject>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Strengths_And_Weaknesses__c</fullName>
        <label>Strengths And Weaknesses</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Three_Year_Commitment_Comment__c</fullName>
        <label>Three Year Commitment Comment</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Three_Year_Commitment__c</fullName>
        <label>Three Year Commitment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Choose_Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title_Role__c</fullName>
        <label>Title/Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Doctor of Ministry</fullName>
                </value>
                <value>
                    <fullName>Ministry</fullName>
                </value>
                <value>
                    <fullName>Pastoral</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Spiritual</fullName>
                </value>
                <value>
                    <fullName>Supervisor</fullName>
                </value>
                <value>
                    <fullName>Vocational</fullName>
                </value>
                <value>
                    <fullName>Nursing Professional</fullName>
                </value>
                <value>
                    <fullName>School</fullName>
                </value>
                <value>
                    <fullName>Church</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Waive_Rights__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waive Rights?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workload_Commitment_Comment__c</fullName>
        <label>Workload Commitment Comment</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Workload_Commitment__c</fullName>
        <label>Workload Commitment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Choose_Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Written_Communication_Skills__c</fullName>
        <label>Written Communication Skills</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Significantly Above Average</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Significantly Below Average</fullName>
                </value>
                <value>
                    <fullName>Not Observed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Reference</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Contact__c</columns>
        <columns>Date_Received__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>REF-{0000}</displayFormat>
        <label>Reference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>References</pluralLabel>
    <recordTypes>
        <fullName>BUILD</fullName>
        <active>true</active>
        <description>BUILD Church and School Reference type</description>
        <label>BUILD</label>
    </recordTypes>
    <recordTypes>
        <fullName>CAPS_Spiritual</fullName>
        <active>true</active>
        <description>Adult Graduate Spiritual Reference</description>
        <label>CAPS Spiritual</label>
    </recordTypes>
    <recordTypes>
        <fullName>CAS</fullName>
        <active>true</active>
        <label>CAS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Doctor_of_Ministry_Context_Form</fullName>
        <active>true</active>
        <description>Seminary Doctor of Ministry Reference</description>
        <label>Doctor of Ministry Context Form</label>
    </recordTypes>
    <recordTypes>
        <fullName>Grad_General</fullName>
        <active>true</active>
        <description>Graduate Professional Reference</description>
        <label>Grad General</label>
    </recordTypes>
    <recordTypes>
        <fullName>Grad_Nursing</fullName>
        <active>true</active>
        <description>Adult Graduate Professional and Supervisor Reference for Nursing and Graduate Professional and Supervsior Reference for Nursing</description>
        <label>Grad Nursing</label>
    </recordTypes>
    <recordTypes>
        <fullName>InMinistry_Context_Form</fullName>
        <active>true</active>
        <description>Seminary Ministry Reference</description>
        <label>InMinistry Context Form</label>
    </recordTypes>
    <recordTypes>
        <fullName>MATL_Ministry_Form</fullName>
        <active>true</active>
        <description>MA Transformational Leadership</description>
        <label>MATL Ministry Form</label>
    </recordTypes>
    <recordTypes>
        <fullName>PSEO</fullName>
        <active>true</active>
        <label>PSEO</label>
    </recordTypes>
    <recordTypes>
        <fullName>Seminary_General</fullName>
        <active>true</active>
        <description>Seminary Pastoral, Personal, and Supervisor Reference</description>
        <label>Seminary General</label>
    </recordTypes>
    <recordTypes>
        <fullName>Seminary_Marriage_Family</fullName>
        <active>true</active>
        <description>Seminary Professional Reference</description>
        <label>Seminary Marriage Family</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>